--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@ href="https://www.facebook.com/profile.php?id=100009582499964">Facebook</li></a>
    <h3>TITULO DO TEXTO</h3>
    <p><i><b>TEXTO</b></i></p>
    <ul id="lista02">
-     <li>ITEM 01</li>
-     <li>ITEM 02</li>
+     <li>Equilíbrio Químico é o estado de uma reação química em que as concentrações dos reagentes e dos produtos permanecem constantes ao longo do tempo. Isso acontece porque as taxas de reação direta e inversa são iguais. Ou seja, as moléculas de reagentes estão se transformando em produtos na mesma velocidade que as moléculas de produtos estão se transformando em reagentes.</li>
+     <li>Dinâmico: As reações continuam acontecendo, mas sem mudanças nas concentrações.
+Pode ser atingido de ambos os lados: Não importa se a reação começa com reagentes ou produtos; o equilíbrio será alcançado.
+Concentrações constantes: Mas não significa que são iguais.
+Influenciado por condições externas: Temperatura, pressão e concentração podem deslocar o equilíbrio.</li>
      <li>ITEM 03</li>
     </ul>
     </div>
