--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ href="https://www.facebook.com/profile.php?id=100009582499964">Facebook</li></a>
 Pode ser atingido de ambos os lados: Não importa se a reação começa com reagentes ou produtos; o equilíbrio será alcançado.
 Concentrações constantes: Mas não significa que são iguais.
 Influenciado por condições externas: Temperatura, pressão e concentração podem deslocar o equilíbrio.</li>
-     <li>ITEM 03</li>
+     <li>para que o equilibrio quimico possa ser estabelecido corretamente  e necessario que  temperatura se matenha constante e queo sistema esteja fechao sem troca de materia com o ambiente</li>
     </ul>
     </div>
    <h1>***</h1>
