--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ href="https://www.facebook.com/profile.php?id=100009582499964">Facebook</li></a>
       </nav>
     </header>
  <main>
-  <h1>TITULO DA PAGINA</h1>
+  <h1>trabalho de quimica Vinicius N37</h1>
    <div class="PRIMEIROPARAGRAFO">
-   <h3>TITULO DO TEXTO</h3>
+   <h3>equilibrio quimico</h3>
    <p><i><b>TEXTO</b></i></p>
    <ul id="lista02">
      <li>Equilíbrio Químico é o estado de uma reação química em que as concentrações dos reagentes e dos produtos permanecem constantes ao longo do tempo. Isso acontece porque as taxas de reação direta e inversa são iguais. Ou seja, as moléculas de reagentes estão se transformando em produtos na mesma velocidade que as moléculas de produtos estão se transformando em reagentes.</li>
