--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@ href="https://www.facebook.com/profile.php?id=100009582499964">Facebook</li></a>
      <li>Equilíbrio Químico é o estado de uma reação química em que as concentrações dos reagentes e dos produtos permanecem constantes ao longo do tempo. Isso acontece porque as taxas de reação direta e inversa são iguais. Ou seja, as moléculas de reagentes estão se transformando em produtos na mesma velocidade que as moléculas de produtos estão se transformando em reagentes.</li>
      <li>Dinâmico: As reações continuam acontecendo, mas sem mudanças nas concentrações.
 Pode ser atingido de ambos os lados: Não importa se a reação começa com reagentes ou produtos; o equilíbrio será alcançado.
-Concentrações constantes: Mas não significa que são iguais       químico:
-
+Concentrações constantes: Mas não significa que são iguais       
+Características do equilíbrio químico:
+◦ Velocidades iguais: As velocidades das reações
+direta e inversa são iguais
+Concentrações constantes: As concentrações dos
+reagentes e produtos permanecem constantes, mas
+não necessariamente sao iguais
 Condições para o equilíbrio químico:
 Sistema fechado: Não há troca de matéria com o ambiente.
 Temperatura constante: A temperatura do sistema deve ser mantida constante        
