--- a/index.html
+++ b/index.html
@@ -26,21 +26,16 @@ href="https://www.facebook.com/profile.php?id=100009582499964">Facebook</li></a>
    <h3>Trabalho de quimica vinicius 1B N36</h3>
    <p><i><b>Equilibro Quimico</b></i></p>
    <ul id="lista02">
-     <li>Equilíbrio Químico é o estado de uma reação química em que as concentrações dos reagentes e dos produtos permanecem constantes ao longo do tempo. Isso acontece porque as taxas de reação direta e inversa são iguais. Ou seja, as moléculas de reagentes estão se transformando em produtos na mesma velocidade que as moléculas de produtos estão se transformando em reagentes.</li>
-     <li>Dinâmico: As reações continuam acontecendo, mas sem mudanças nas concentrações.
-Pode ser atingido de ambos os lados: Não importa se a reação começa com reagentes ou produtos; o equilíbrio será alcançado.
-Concentrações constantes: Mas não significa que são iguais       
-Características do equilíbrio químico:
-◦ Velocidades iguais: As velocidades das reações
-direta e inversa são iguais
-Concentrações constantes: As concentrações dos
-reagentes e produtos permanecem constantes, mas
-não necessariamente sao iguais
-Condições para o equilíbrio químico:
-Sistema fechado: Não há troca de matéria com o ambiente.
-Temperatura constante: A temperatura do sistema deve ser mantida constante        
-Influenciado por condições externas: Temperatura, pressão e concentração podem deslocar o equilíbrio.</li>
-     <li>para que o equilibrio quimico possa ser estabelecido corretamente  e necessario que  temperatura se matenha constante e queo sistema esteja fechado sem troca de materia com o ambiente</li>
+     <li>equilibrio químico é. um fenômeno que ocorre em reações
+químicas reversíveis, onde a velocidade da reação direta
+(formação de produtos) é igual.à velocidade da reação
+nversa (formação.de reagentes)</li>
+     <li>Condições para o equilíbrio químico
+◦ Sistema fechado: Não há troca de matéria com 0
+ambiente.
+Temperatura constante: A temperatura do sistema
+deve ser mantida constante</li>
+     <li> </li>
     </ul>
     </div>
    <h1>***</h1>
