--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@ nversa (formação.de reagentes)</li>
 ambiente.
 Temperatura constante: A temperatura do sistema
 deve ser mantida constante</li>
-     <li> </li>
+     <li>Fatores que afetam o equilíbrio químico:
+Concentração: Alterações na concentração dos reagentes ou produtos podem deslocar o equilíbrio.
+Temperatura: Mudanças na temperatura podem afetar a posição do equilíbrio.
+Pressão: Em sistemas gasosos, mudanças na pressão podem deslocar o equilíbrio.
+Catalisadores: Podem acelerar a velocidade com que o equilíbrio é atingido, mas não alteram a posição do equilíbrio</li>
     </ul>
     </div>
    <h1>***</h1>
