--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ deve ser mantida constante</li>
 Concentração: Alterações na concentração dos reagentes ou produtos podem deslocar o equilíbrio.
 Temperatura: Mudanças na temperatura podem afetar a posição do equilíbrio.
 Pressão: Em sistemas gasosos, mudanças na pressão podem deslocar o equilíbrio.
-Catalisadores: Podem acelerar a velocidade com que o equilíbrio é atingido, mas não alteram a posição do equilíbrio</li>
+Catalisadores: Podem acelerar a velocidade com que o equilíbrio é atingido, mas não alteram a posição do equilíbrio</li>o equilibrio quimico bam bam bam 
     </ul>
     </div>
    <h1>***</h1>
