--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@ deve ser mantida constante</li>
 Concentração: Alterações na concentração dos reagentes ou produtos podem deslocar o equilíbrio.
 Temperatura: Mudanças na temperatura podem afetar a posição do equilíbrio.
 Pressão: Em sistemas gasosos, mudanças na pressão podem deslocar o equilíbrio.
-Catalisadores: Podem acelerar a velocidade com que o equilíbrio é atingido, mas não alteram a posição do equilíbrio</li>o equilibrio quimico bam bam bam 
+Catalisadores: Podem acelerar a velocidade com que o equilíbrio é atingido, mas não alteram a posição do equilíbrio</li>
+<li>equilibrio quimico constante A constante de equilíbrio, ( K ), é uma medida da posição do equilíbrio e é definida em termos das concentrações dos reagentes e produtos. Para a reação genérica:
+aA+bB⇌cC+dD
+A constante de equilíbrio é expressa como:
+Kc​=[A]a[B]b[C]c[D]d​
+Onde ( [A] ), ( [B] ), ( [C] ) e ( [D] ) são as concentrações molares das substâncias respectivas, e ( a ), ( b ), ( c ) e ( d ) são seus coeficientes estequiométricos</li>     
     </ul>
     </div>
    <h1>***</h1>
